--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.4.2",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.2"
   }
 }
