--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
     "bcrypt": "^5.1.0",
     "connect-flash": "^0.1.1",
     "deep-email-validator": "^0.1.21",
