--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
     "mongoose": "^7.4.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemon": "^3.0.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.2"
