--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.0.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "quill": "^1.3.7",
     "socket.io": "^4.7.2"
   }
 }
